--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer src="src/js/controller.js"></script>
+    <script defer src="src/js/controller.js" type="module"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -121,7 +121,7 @@
           </button> -->
         </div>
 
-        <p class="copyright">&copy; Copyright by Jorge Guerrero.</p>
+        <p class="copyright">&copy; Copyright by Jorge Guerrero. 2022</p>
       </div>
 
       <div class="recipe">
